# easy_wasm_plotly

./: .gitignore  Cargo.toml  README.md  git-ignore-update.sh
examples/demo/: Cargo.toml
examples/demo/src/: app.rs  main.rs
src/: app.rs
src/app/: basic_charts.rs  custom_controls.rs  financial_charts.rs  images.rs  maps.rs  ndarray.rs  scientific_charts.rs  shapes.rs  statistical_charts.rs  subplots.rs  t3d_charts.rs
